[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/CheckCanSeeRay.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/OnlyVisibleWhenInView.gd" type="Script" id=2]

[node name="OnlyVisibleWhenInView" type="Spatial"]
script = ExtResource( 2 )

[node name="CheckCanSeeRay" parent="." instance=ExtResource( 1 )]

[node name="CheckViewTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="CheckViewTimer" to="." method="_on_CheckViewTimer_timeout"]
